--- a/abs-ai-hub/hub-ui/assets/components/status-card.html
+++ b/abs-ai-hub/hub-ui/assets/components/status-card.html
@@ -14,6 +14,6 @@
             {{name}}
             <span class="status-version">v<span id="{{id}}-version-summary">{{version}}</span></span>
         </div>
-        <div class="status-indicator {{status}}" id="{{id}}-status-summary">{{status}}</div>
+        <div class="status-indicator" id="{{id}}-status-summary">{{status}}</div>
     </div>
 </div>
